Requisitos 03 - Inserção de foto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo"></h1>
+        <h1 id="titulo">Project Lessons Learned</h1>
     </header>
+    <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano">
 </body>
 </html>
