atualiza links e footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <img src="eu.jpg" alt="Foto de Carine Becker" id="minha_foto">
-    <a href="http://github.com/carinebecker" target="_blank">Carine Becker</a>
+    <a href="http://linkedin.com/in/carinebecker" target="_blank">Carine Becker</a>
     
     <section>
         <ol id="licoes_aprendidas">
@@ -58,7 +58,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, commodi nobis debitis earum ex quia tempora, accusamus consectetur fugiat, saepe soluta quasi! Neque doloremque alias commodi earum corporis, veniam architecto.</p>
     </aside>
 
-    <footer id="rodape"></footer>
+    <footer id="rodape">Made with ♡ by <a href="https://github.com/carinebecker">Carine Becker</a></footer>
 
 </body>
 </html>
