--- a/index.html
+++ b/index.html
@@ -7,3 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+        <nav id="navegacao">
+        <ul id="listanav">
+            <li> <a href="https://www.betrybe.com/" target = "_blank">Trybe</a> </li>
+            <li> <a href="https://github.com/BernardoFontes" target = "_blank">GitHub</a></li>
+            <li> <a href="https://www.linkedin.com/in/bernardo-fontes-/" target = "_blank">Contato Linkedin</a> </li>
+          </nav>
+          </header>
