--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <li>Forms</li>
         </ol>
     </main>
-    
+    <footer id="rodape">
+        <p>Link para o meu perfil no <a href="https://github.com/ChrisMoura2000" target="_blank" rel="external">GitHub</a></p>
+    </footer>
 </body>
 </html>
