Adiciona lista de coisas aprendidas requisito nº 4

--- a/index.html
+++ b/index.html
@@ -9,13 +9,42 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+        <nav>
+            <ul>
+                <li><a</li>
+            </ul>
+        </nav>
     </header>
-    <img src="20201004_155453.jpg" alt="Foto-minha" id="minha_foto">
+    <div id="img">
+        <img src="20201004_155453.jpg" alt="Foto-minha" id="minha_foto">
+    </div>
     <main>
+        <article>
+            <section>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Bash</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Empatia</li>
+                    <li>Trabalho em grupo</li>
+                    <li>HTML semantico</li>
+                    <li>ShelScript</li>
+                    <li>Zoom</li>
+                    <li>Slack</li>
+                </ol>
+            </section>
+            <section>
+                <ul id="licoes_a_aprender">
+                    
+                </ul>
+            </section>
+        </article>
         <article>
             <h2>O que aprendi ?</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate quod magnam minima et dolorem quos. Voluptatibus, velit dolorem similique a laboriosam nam, itaque autem officia expedita officiis ducimus quasi ipsam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos repellat incidunt, labore eaque voluptatum iusto culpa quo voluptatibus. Enim delectus voluptas pariatur hic. Placeat dicta libero vero perspiciatis, nobis et?</p>
         </article>
+
     </main>
 </body>
 </html>
