--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
           <h1 id="titulo">Lições aprendidas - Trybe!</h1>
       </header>
       <img id="minha_foto" src="retrato1.png" alt="foto rafael azevedo">
+      <a href="https://github.com/RafaelBiatoAzevedo">Rafael Azevedo</a>
       <ol id="licoes_aprendidas">
           <li>Unix</li>
           <li>Git</li>
