--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
             <li>item9</li>
             <li>item10</li>
         </ol>
+
+        <ul id="licoes_a_aprender">
+            <li>item1</li>
+            <li>item2</li>
+            <li>item3</li>
+            <li>item4</li>
+            <li>item5</li>
+            <li>item6</li>
+            <li>item7</li>
+            <li>item8</li>
+            <li>item9</li>
+            <li>item10</li> 
+        </ul>
     </main>
 
 </body>
