--- a/index.html
+++ b/index.html
@@ -13,19 +13,37 @@
     </header>
 
 <main>
-    <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado">
-    
-    <ol id="licoes_aprendidas">
-        <li>Unix & Bash</li>
-        <li>Git</li>
-        <li>Github</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Empatia</li>
-        <li>Inspect</li>
-        <li>Semantic HTML</li>
-    </ol>
+    <section><img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado">
+    </section>
+
+    <section> 
+        <ol id="licoes_aprendidas">
+            <li>Unix & Bash</li>
+            <li>Git</li>
+            <li>Github</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Empatia</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
+    </section>
+
+    <section>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
+    </section>
 </main>
 </body>
