adicionando terceiro requisito

--- a/index.html
+++ b/index.html
@@ -16,3 +16,6 @@
             <li> <a href="https://www.linkedin.com/in/bernardo-fontes-/" target = "_blank">Contato Linkedin</a> </li>
           </nav>
           </header>
+          <div id="imagem">
+            <img id="minha_foto" src="https://raw.githubusercontent.com/BernardoFontes/BernardoFontes.github.io/master/assets/fotoredi.png" alt="Bernardo Fontes"> 
+            <a href="#minha_foto">Bernardo Fontes</a> </div>
