Requisito 3 - Adicionado foto de Rodrigo Farias

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Projeto 1</h1>
     </header>
+    <img src="rodrigofarias.jpeg" alt="Foto de Rodrigo Farias" id="minha_foto">
 </body>
 </html>
