--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </ul>
         </section>
     </div>
+    <footer id="rodape">
+        <p>Todos o direitos reservados! <a href="http://henriquesa.tech/" target="_blank">Henrique</a></p>
+    </footer>
 </body>
 
 </html>
