--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
             <li>Inspect</li>
             <li>Semantic HTML</li>
         </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>Design Patterns</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
     </section>
 
     
