7 - link externo para Github e LinkedIn

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                         <li>Redux</li>
                     </ul>
               </section>
+
+              <p>Para conhecer meus trabalhos acesse o meu <a href="https://github.com/saulokirchmaier" target="_blank">Github</a>, e para saber um pouco mais sobre mim acesse o meu <a href="https://www.linkedin.com/in/saulokirchmaier/" target="_blank">LinkedIn</a></p>
           </main>
 
           <footer id="rodape">
