step 4 & 5 | add lists

--- a/index.html
+++ b/index.html
@@ -10,5 +10,29 @@
             <h1 id="titulo">Giovani Lopes Diccini</h1>
         </header>
         <img id="minha_foto" src="giovani.jpeg" alt="imagem_autor">
+        <ol id="licoes_aprendidas">
+            <li>HTML;</li>
+            <li>CSS;</li>
+            <li>SEO;</li>
+            <li>Acessibilidade;</li>
+            <li>HTML SEMÂNTICO;</li>
+            <li>GIT;</li>
+            <li>INTERNET;</li>
+            <li>SOFT SKILLS;</li>
+            <li>GITHUB;</li>
+            <li>Pesquisar como um dev;</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript;</li>
+            <li>React;</li>
+            <li>NodeJS;</li>
+            <li>Python;</li>
+            <li>Estrutura de dados;</li>
+            <li>Algorítimos;</li>
+            <li>Testes Unitários;</li>
+            <li>Programação orientada a objetos;</li>
+            <li>Arquitetura de Computadores e Redes;</li>
+            <li>Banco de dados;</li>
+        </ul>
     </body>
 </html>
