--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
       <a href="" >Rodapé</a>
     </nav>
   </header>
+  <main>
+    <h1>Sobre mim</h1>
+    <img src='./assets//Screenshot_20200825-124946_Gallery.jpg' alt="Ederson image" id="minha_foto" width="200px">
+  </main>
+  <aside>
+    <h2>artigos</h2>
+  </aside>
 </body>
 </html>
