--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
     </header>
     <main>
         <img id="minha_foto" src="foto.jpg" alt="Foto Felipe Rocha">
+        <section>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Shell</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Client & Server Architecture (Networks)</li>
+                <li>Protocols HTTP & HTTPS</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Semantic HTML</li>
+                <li>Soft Skills</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>CSS Responsive</li>
+                <li>Forms</li>
+                <li>Scrum</li>
+                <li>React</li>
+                <li>SQL</li>
+                <li>NodeJS</li>
+                <li>Python</li>
+                <li>Unit Tests</li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
