[Task 4] Created ordered list with lessons learned

--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
             <h1 id="titulo">Lessons Learned</h1>
         </header>
         <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
+        <section>
+            <ol id="licoes_aprendidas">
+                <li>Fundamentos do Desenvolvimento Web</li>
+                <li>Introdução - Unix & Shell</li>
+                <li>Unix & Bash</li>
+                <li>Git & GitHub - <em>O que é e pra que serve?</em></li>
+                <li>Git & GitHub - <em>Entendendo comandos</em></li>
+                <li>Fundamentos da Internet - <em>Como ela funciona?</em></li>
+                <li>HTML & CSS - Estrutura de Página</li>
+                <li>HTML & CSS - Iniciando com CSS</li>
+                <li>HTML & CSS - Seletores e Posicionamento</li>
+                <li>HTML Semântico</li>
+            </ol>
+        </section>
     </body>
 </html>
