--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <title>projeto1</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
         <style>
             
         </style>
