--- a/index.html
+++ b/index.html
@@ -19,3 +19,17 @@
           <div id="imagem">
             <img id="minha_foto" src="https://raw.githubusercontent.com/BernardoFontes/BernardoFontes.github.io/master/assets/fotoredi.png" alt="Bernardo Fontes"> 
             <a href="#minha_foto">Bernardo Fontes</a> </div>
+            <section class="lista1">
+                <h2>Lições Aprendidas</h2>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Bash</li>
+                    <li>Git</li>
+                    <li>Github</li>
+                    <li>Github Pages</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>HTML Semântico</li>
+                    <li>Inteligência Emocional</li>
+                    <li>Linkedin</li>
+                </ol></section>
