--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <header id="cabecalho">
+            <h1 id="titulo">Project: Lessons Learned</h1>
+        </header>
 </body>
 </html>
