--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </h1>
         </header>
         <main>
-            <img src="brenno-calado.jpg" alt="Autor da página posando para uma foto com a mata de Brennand como plano de fundo">
+            <img id="minha_foto" src="brenno-calado.jpg" alt="Autor da página posando para uma foto com a mata de Brennand como plano de fundo">
         </main>
     </body>
 </html>
