Adicionado rodapé - HTML

--- a/index.html
+++ b/index.html
@@ -37,5 +37,9 @@
             <li>Python3</li>
         </ul>
     </main>
+    <footer id="rodape">
+        <p>Lucio Silva - All Rights Reserved</p>
+        <p>Visit my <a href="https://github.com/LucioOSilva" target="blank">Github</a></p>
+    </footer>
 </body>
 </html>
