--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <li>SQL</li>
         </ul>
     </section>
-
+<footer id="rodape">
+    <p>Todos os direitos reservados, Bruno</p>
+</footer>
     
 </body>
 </html>
