7 Ajustes de organizaçao e adicionando footer

--- a/index.html
+++ b/index.html
@@ -14,30 +14,36 @@
         </h1>
     </header>
     <!--                                           --- MAIN ---                                                     -->
-    <img id="minha_foto" src="imagens/toselli.jpg" width="100px" alt="Uma foto de Pedro Toselli">
-    <ol id="licoes_aprendidas">
-        <li>Inteligência emocional</li>
-        <li>Soft-skills</li>
-        <li>Estruturas HTML</li>
-        <li>Semântica HTML</li>
-        <li>Estruturas CSS</li>
-        <li>Comandos do terminal</li>
-        <li>Como usar Git</li>
-        <li>Github</li>
-        <li>VSCode</li>
-        <li>Internet e como ela funciona</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-        <li>lorem3</li>
-    </ul>
+    <main>
+        <img id="minha_foto" src="imagens/toselli.jpg" width="100px" alt="Uma foto de Pedro Toselli">
+        <section class="main-list">
+            <ol id="licoes_aprendidas">
+                <li>Inteligência emocional</li>
+                <li>Soft-skills</li>
+                <li>Estruturas HTML</li>
+                <li>Semântica HTML</li>
+                <li>Estruturas CSS</li>
+                <li>Comandos do terminal</li>
+                <li>Como usar Git</li>
+                <li>Github</li>
+                <li>VSCode</li>
+                <li>Internet e como ela funciona</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>Python</li>
+                <li>JavaScript</li>
+                <li>Node JS</li>
+                <li>Segurança de dados</li>
+                <li>Python</li>
+                <li>Desenvolvimento de jogos</li>
+                <li>Desenvolvimento em C</li>
+                <li>C++</li>
+                <li>web design</li>
+                <li>como fazer miojo</li>
+            </ul>
+        </section>
+    </main>
+    <footer id="rodape">
+    </footer>
 </body>
 </html>
