--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                 </ul>
             </section>
         </article>
+        <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quaerat nostrum quo nobis neque expedita non in accusantium itaque eaque perferendis reprehenderit cumque, architecto error nemo quas obcaecati sequi provident!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut illum dignissimos ipsum, esse quasi ipsam nesciunt voluptates natus alias dicta, laboriosam, quidem vel quisquam facilis voluptate adipisci nulla labore consequuntur!</p>
+        </article>
+        <aside>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta accusamus corrupti necessitatibus labore architecto quae eos deleniti cum repellendus quod mollitia maxime doloremque quam praesentium, dignissimos hic culpa fugit ut.</p>
+        </aside>
     </main>
     <footer id="rodape"> by <a href="https://www.linkedin.com/in/johne-alves/" target="blanch">Johne Alves</a></footer>
 </body>
