--- a/index.html
+++ b/index.html
@@ -19,43 +19,60 @@
             <article>
                 <section id="sec-foto">
                     <figure>
-                        <a href="https://www.instagram.com/matheusmrtno/" target="_blank"><img id="minha_foto" src="minha_foto.jpeg" alt="Minha foto de perfil" /></a>
+                        <a href="https://www.instagram.com/matheusmrtno/" target="_blank"><img id="minha_foto"
+                                src="minha_foto.jpeg" alt="Minha foto de perfil" /></a>
                         <figcaption>Clique na foto para acessar meu instagram</figcaption>
                     </figure>
                 </section>
 
-                <section id="sec-aprendidas">
-                    <ol id="licoes_aprendidas">
-                        <li>Unix</li>
-                        <li>Bash</li>
-                        <li>Git</li>
-                        <li>GitHub</li>
-                        <li>Internet</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Semântica</li>
-                        <li>Acessibilidade</li>
-                        <li>Inspect</li>
-                    </ol>
-                </section>
+                <section id="licoes">
+                    <div id="div-aprendidas">
+                        <ol id="licoes_aprendidas">
+                            <li>Unix</li>
+                            <li>Bash</li>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>Internet</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Semântica</li>
+                            <li>Acessibilidade</li>
+                            <li>Inspect</li>
+                        </ol>
+                    </div>
 
-                <section id="sec-aprender">
-                    <ul id="licoes_a_aprender">
-                        <li>JavaScript</li>
-                        <li>Responsividade</li>
-                        <li>Jest</li>
-                        <li>RTL</li>
-                        <li>Redux</li>
-                        <li>API</li>
-                        <li>SQL</li>
-                        <li>MongoDB</li>
-                        <li>NodeJS</li>
-                        <li>Rest</li>
-                    </ul>
+                    <div id="div-aprender">
+                        <ul id="licoes_a_aprender">
+                            <li>JavaScript</li>
+                            <li>Responsividade</li>
+                            <li>Jest</li>
+                            <li>RTL</li>
+                            <li>Redux</li>
+                            <li>API</li>
+                            <li>SQL</li>
+                            <li>MongoDB</li>
+                            <li>NodeJS</li>
+                            <li>Rest</li>
+                        </ul>
+                    </div>
                 </section>
+            </article>
+
+            <article>
+                <p>
+                    A formação Trybe é 100% online e conta com aulas ao vivo, onde você interage com sua turma diariamente.
+
+                    Você pode fazer toda sua formação de qualquer local, desde que tenha disponibilidade de segunda a sexta, de 14h às 20h, horário de Brasília, e conquiste a aprovação no processo seletivo da Trybe.
+                    
+                    Duração aproximada de 12 meses com carga horária de 1.500 horas.
+                </p>
             </article>
         </main>
     </div>
+
+    <footer id="rodape">
+
+    </footer>
 </body>
 
 </html>
