--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <script src='main.js'></script>
 </head>
 <body>
-
-  </main>
-
+  <header id="cabecalho">
+    <h1 id="titulo">Lessons Learned</h1>
+  </header>
 </body>
 </html>
