--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
       Lições Aprendidas - Trybe :)
     </h1>
     <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
-  </header>  
+  </header>
+  <main>
+    <section>
+      <ol id="licoes_aprendidas">
+        <li>Unix & Bash</li>
+        <li>Internet</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Estrutura de páginas HTML & CSS</li>
+        <li>Seletore e posicionamento</li>
+        <li>HTML semântico</li>
+        <li>Zoom</li>
+        <li>Slack</li>
+        <li>inteligência emocional</li>
+      </ol>
+    </section>
+  </main>
 </body>
 </html>
