--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <li>Controle da ansiedade</li>
         <li>Unit Tests</li>
     </ul>
+    <article>
+        <p>Desde que entrei na Trybe, meu aprendizado tem sido exponencial devido a toda evolução que tive nessas duas ultimas semanas de estudos, coisas que eu sempre pensei que era apenas gênios que faziam.<br>
+        Hoje com todo o suporte que a escola tem me dado tenho evoluído muito dentro da área que estou me descobrindo.</p>
+    </article>
     </main>
     <footer id="rodape">
         <a id="link" href="https://blog.betrybe.com/" target="_blank">Blog da Trybe!</a>
