setp 6 & 7 | footer + external link

--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
             <li>Arquitetura de Computadores e Redes;</li>
             <li>Banco de dados;</li>
         </ul>
+        <a href="https://www.linkedin.com/in/giovani-diccini/">Linkedin</a>
+        <footer id="rodape"></footer>
     </body>
 </html>
