Requisitos 04 - Inserção de lista numerada

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
         <h1 id="titulo">Project Lessons Learned</h1>
     </header>
     <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano">
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+    </ol>
 </body>
 </html>
