adicionando quinto requisito

--- a/index.html
+++ b/index.html
@@ -32,4 +32,20 @@
                     <li>HTML Semântico</li>
                     <li>Inteligência Emocional</li>
                     <li>Linkedin</li>
-                </ol></section>
+                </ol>
+                </section>
+                <section class="lista2">
+                    <h2>Lições a Aprender</h2>
+                <ul id="licoes_a_aprender">
+                    <li>Javascript</li>
+                    <li>React</li>
+                    <li>Bootstrap</li>
+                    <li>SQL</li>
+                    <li>NoSQL</li>
+                    <li>Python</li>
+                    <li>Ciência da Computação</li>
+                    <li>NodeJS</li>
+                    <li>MongoDB</li>
+                    <li>Soft Skills</li>
+                </ul>
+                </section>
