Finishing requisite #4- GOGO Tryber

--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
         <h1 id="titulo">Lessons Learned Project</h1>
     </header>
     <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha-foto">
+
+    <ul id="licoes-aprendidas">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>GIT</li>
+        <li>GitHub</li>
+        <li>Softskills Empatia</li>
+        <li>Softskills Entendendo as emocoes</li>
+        <li>Softskills Gerenciando as reacoes as emocoes</li>
+        <li>Softskills Gerenciar o tempo</li>
+        <li>Softskills Definir prioridades</li>
+        <li>Quem eh o Pharaooooo???</li>
+    </ul>
 </body>
 </html>
