link externo, article e aside

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 
     <header id="cabecalho">
         <h1 id="titulo">O que eu aprendi na Trybe até agora</h1>
-
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="https://www.betrybe.com/" target="_blank">Trybe</a></li>
-        </ul>
     </header>
 
     <img id="minha_foto" src="rsz_21perfil.png" alt="me">
+
+    <a href="index.html">Home</a>
+    <a href="https://www.betrybe.com/" target="_blank">Trybe</a>
+    </ul>
 
     <section>
         <ul id="licoes_a_aprender">
@@ -35,6 +34,23 @@
             <li>Definir prioridades.</li>
         </ul>
     </section>
+
+    <article>
+        <h3>Como está sendo o meu aprendizado</h3>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nostrum aut explicabo tempora repellendus
+            nesciunt voluptatum eius aspernatur labore? Adipisci veniam vero expedita dolorum aspernatur nam incidunt
+            mollitia deserunt placeat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero, quas
+            eius vero quia, numquam vel id corrupti a neque enim nisi maxime modi fugiat architecto? Reiciendis
+            aspernatur nulla ipsa?
+        </p>
+
+        <aside>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum est suscipit ratione incidunt ea delectus
+                laudantium laboriosam, dolorem tempora sapiente cupiditate rerum vel. Cupiditate earum sapiente, facilis
+                sunt sint consequatur?</p>
+        </aside>
+    </article>
 
     <footer id="rodape">
     </footer>
