--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
       Aut quibusdam libero asperiores assumenda tenetur blanditiis odit earum harum, aliquid qui corporis nesciunt impedit consequuntur voluptates, reiciendis error vitae dolores! Nobis recusandae delectus debitis?</p>
     </header>
   </article>
-  <aside>
-    <h2>Meu aprendizado</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat impedit, tempora ullam quisquam cumque quod praesentium qui ducimus enim! Sit id suscipit odio eum magnam temporibus delectus inventore maiores.
-    Doloremque recusandae quas eius ad delectus, quidem ipsum, debitis dolore atque amet soluta quis sed. Numquam deleniti repellendus assumenda eligendi nostrum quasi, amet aspernatur inventore perspiciatis sit impedit, rem quibusdam.
-  </p>
-  </aside>
+  <section>
+    <aside>
+      <h2>Meu aprendizado</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat impedit, tempora ullam quisquam cumque quod praesentium qui ducimus enim! Sit id suscipit odio eum magnam temporibus delectus inventore maiores.
+    </p>
+    </aside>
+  </section>
   <ul id="licoes_a_aprender">
     <li>Lógica de Programação</li>
     <li>Javascript</li>
