--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
   <header id="cabecalho">
     <h1 id="titulo">Lessons Learned</h1>
   </header>
+
+  <main>
+    <img id="minha_foto" src="/images/leo-pic.png" alt="Foto de Leonardo Majevski">
+  </main>
 </body>
 </html>
