--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
                 <h1 id="titulo">Lições Aprendidas</h1>
             </header>
             <img id="minha_foto"src="MinhaFoto.jpg" alt="minha foto">
+            <ol id="licoes_aorendidas">
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>HTML Semântico</li>
+                <li>Soft Skills</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+            </ol>
         </main>
     </body>
 </html>
