Nono requisito: Retira tag <section> do aside

--- a/index.html
+++ b/index.html
@@ -39,19 +39,17 @@
     <li>SQL</li>
   </ul>
   <article>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse
-        consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
-        sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, deserunt. Eveniet, amet perferendis
-        consequuntur libero velit dolore, atque itaque quis placeat ipsum accusantium, asperiores nihil dolorem.
-        Molestiae sapiente non pariatur.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse
+      consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
+      sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, deserunt. Eveniet, amet perferendis
+      consequuntur libero velit dolore, atque itaque quis placeat ipsum accusantium, asperiores nihil dolorem.
+      Molestiae sapiente non pariatur.</p>
   </article>
-  <section>
-      <aside>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse
-          consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
-          sunt Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      </aside>
-    </section>
+  <aside>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse
+      consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
+      sunt Lorem ipsum dolor.</p>
+  </aside>
   <footer id="rodape"></footer>
 </body>
 </html>
