Corrige id da lista de licoes aprendidas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <h1 id="titulo">Lições Aprendidas</h1>
             </header>
             <img id="minha_foto"src="MinhaFoto.jpg" alt="minha foto">
-            <ol id="licoes_aorendidas">
+            <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Bash</li>
                 <li>Git</li>
