add blanck to external link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header id="cabecalho">
             <h1 id="titulo">titulo</h1>
             <img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="200px">
-            <nav>
+            <nav id="headNav">
                 <a href="">Home</a>
                 <a href="">Reference</a>
                 <a href="">Contact</a>
@@ -38,6 +38,8 @@
                     <li>Hardskills</li>
                     <li>Bash</li>
                 </ol>
+            </section>
+            <section>
                 <ul #licoes_a_aprender>
                     <li>sao</li>
                     <li>tantas</li>
@@ -53,7 +55,7 @@
             </section>
         </main>
         <footer #rodape>
-            <a href="https://www.lipsum.com/">Gerador de Textos</a>
+            <a href="https://www.lipsum.com/" target="_blank">Gerador de Textos</a>
         </footer>
     </body>
 </html>
