adicionando sexto requisito

--- a/index.html
+++ b/index.html
@@ -49,3 +49,4 @@
                     <li>Soft Skills</li>
                 </ul>
                 </section>
+                <footer id="rodape"> Todos os direitos reservados, Bernardo Miranda de Castro Fontes </footer>
