--- a/index.html
+++ b/index.html
@@ -10,6 +10,35 @@
     <header id="cabecalho">
         <h1 id="titulo">Osvaldo Borges Campos Neto</h1>
     </header>
-    <img src="../images/me.jpg" alt="Minha Foto" id="minha_foto">
+    <div class="fotos">
+        <img src="../images/me.jpg" alt="Minha Foto" id="minha_foto">
+    </div>
+    <section>
+        <h2>Licoes</h2>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>SoftSkills</li>
+            <li>Zoom</li>
+            <li>Slack</li>
+            <li>Semantic HTML</li>
+            <li>+++</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+            <li>HashSet</li>
+        </ul>
+    </section>
 </body>
 </html>
