--- a/index.html
+++ b/index.html
@@ -11,5 +11,21 @@
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
 
     </header>
+    <a>
+        <img src="minha_foto.png" alt="Foto de Danrlley Rodrigues">
+    </a>
+
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Terminal Linux</li>
+        <li>Internet</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>HTML5</li>
+        <li>CSS</li>
+        <li>HTML Semântico</li>
+        <li>Empatia</li>
+        <li>Inteligência Emocional</li>
+    </ol>
   </body>
 </html>
