--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+<header id="cabecalho">
+    <h1 id="titulo">Lições que aprendi </h1>
+</header>
 </body> 
