--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
   <body>
     <h1 id="cabecalho">lessons learned</h1>
     <img id="minha_foto" src="rsz_whatsapp_image_2020-11-05_at_134848.jpg" alt="minha foto">
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>Html</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+    </ol>
+   
   </body>
 </html>
