Adiçao de aside

--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
     </section>
     <section>
       <article>
-        <p>Estou tendo a oportunidade de aprender programação como nunca tive. Até o momento aprendi com profundidade sobre Bash, Git e GitHub, que são aplicados utilizando o terminal. Também aprendi sobre HTMl e CSS, e hoje estou aplicando o meu aprendizado construindo esse porrifólio.</p>
+        <p>Estou tendo a oportunidade de aprender programação como nunca tive. Até o momento aprendi com profundidade sobre Bash, Git e GitHub, que são aplicados utilizando o terminal. Vi como tudo ocorre por trás dos panos na internet, como ela funciona ao fazermos uma simples pesquisa. Também aprendi sobre HTML e CSS, e hoje estou aplicando o meu aprendizado construindo esse porrifólio.</p>
       </article>
+    </section>
+    <section>
+      <aside>
+        <p>A primeira vez que vi sobre Git e GitHub, confesso que fiquei meio preocupada em como eu iria aprender e lembrar de tudo, isso foi antes da Trybe, agora com as aulas e o conteúdo, ficou bem mais fácil de assimilar e a prática do dia a dia ajuda bastante também.</p>
+      </aside>
     </section>
   </main>
   <footer id="rodape">
