adicionando oitavo requisito (o setimo ja tinha)

--- a/index.html
+++ b/index.html
@@ -49,4 +49,8 @@
                     <li>Soft Skills</li>
                 </ul>
                 </section>
+                <div class="lados"><article class="lado-esquerdo">Comecei minha jornada na Trybe no dia 9 de novembro de 2020, de lá pra cá aprendi 
+                    muitas coisas interessantes sobre desenvolvimento web e pretendo aprender ainda muito mais com 
+                  o tempo de estudo, esse é meu primeiro projeto de muitos e estou ansioso para entrar no 
+              mercado de trabalho na área da programação. </article>
                 <footer id="rodape"> Todos os direitos reservados, Bernardo Miranda de Castro Fontes </footer>
