Quarto e quinto requisito

--- a/index.html
+++ b/index.html
@@ -13,12 +13,40 @@
       <a href="" >Rodapé</a>
     </nav>
   </header>
+  <div id="page_content">
   <main>
     <h1>Sobre mim</h1>
     <img src='./assets//Screenshot_20200825-124946_Gallery.jpg' alt="Ederson image" id="minha_foto" width="200px">
+    <div id="list_content">
+    <ol>
+      <li>Unix</li>
+      <li>Git</li>
+      <li>Github</li>
+      <li>Empatia</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Slack</li>
+      <li>Zoom</li>
+      <li>Inspec</li>
+      <li>Semantic HTML</li>
+    </ol>
+    <ul>
+      <li>Javascript</li>
+      <li>DOM</li>
+      <li>Forms</li>
+      <li>CSS Responsive</li>
+      <li>ES6</li>
+      <li>HOF</li>
+      <li>Unit Tests</li>
+      <li>React</li>
+      <li>Node</li>
+      <li>SQL</li>
+    </ul>
+  </div>
   </main>
   <aside>
-    <h2>artigos</h2>
+    <h2>SideBar</h2>
   </aside>
+</div>
 </body>
 </html>
