--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - trybe</h1>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Login</li>
+            </ul>
+        </nav>
     </header>
     <main>
         <img id="minha_foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
