Requisito 5 - lista de lições que ainda deseja aprender

--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>HTML Semântico</li>            
-        </ol>        
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>Lógica de Programação</li>
+            <li>DOM, Eventos e Web Storage</li>
+            <li>Forms, Flexbox e Responsivo</li>
+            <li>React</li>
+            <li>Metodologias Ágeis</li>
+            <li>SQL</li>
+            <li>Normalização e Modelagem de Banco de Dados</li>
+            <li>Arquitetura de Computadores e Redes</li>
+            <li>Python</li>            
+        </ul>        
     </body>
 </html>
