setp 8 & 9 | add article + aside

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
             <li>Arquitetura de Computadores e Redes;</li>
             <li>Banco de dados;</li>
         </ul>
+        <article>
+            <p>
+                Ut odio elit, mollis a consectetur in, vehicula eu magna. Duis convallis velit ut leo convallis convallis. Nunc finibus, nulla at vehicula lacinia, lorem justo varius justo, sit amet rutrum tellus lacus nec felis. Proin luctus odio quam, eget vestibulum dolor pretium vitae. Etiam vulputate, dui eget hendrerit placerat, nulla massa vulputate eros, quis hendrerit ex justo eu lectus. Nullam sed convallis ligula, sed lacinia augue. Maecenas sit amet risus nisi. Aenean porta leo ut ante pulvinar, eu molestie enim posuere.
+            </p>            
+        </article>
+        <aside>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac arcu molestie neque auctor rutrum cursus in lorem. Ut eget dignissim magna. Aenean eget dictum odio, sed porttitor magna. Nunc maximus vitae est bibendum tempor.
+            </p>
+        </aside>
         <a href="https://www.linkedin.com/in/giovani-diccini/">Linkedin</a>
         <footer id="rodape"></footer>
     </body>
