--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
           <li>Node</li>
           <li>SQL</li>
       </ul>
+      <article>
+          <p>Reforçei tudo o sabia de linux, aprendi ferramentas ótimas de comunicação como Zomm e slack que irão me ajudar muito na minha caminhadada. Aprendi Git e GitHub para controlar o versionamento do meu código e por fim HTML para estruturar minhas páginas, CSS para estiliza-las e Semantic HTML para melhorar a navegabilidade e auxiliar a acessibilidade. </p>
+      </article>
       <footer id="rodape">
-
       </footer>
   </body>
 </html>
