corrigindo artigo novamente

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <article>
         <h1>Aprendizado</h1>
         <p>
-        e  igravida dictum fusce ut placerat orci nulla pellentesque dignissim enim sit amet venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt augunterdum velit euismod in pellentesque massa placerat duis ultricies lacus sed turpis tincidunt e  igravida dictum fusce ut placerat orci nulla pellentesque dignissim enim sit amet venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt augunterdum velit euismod in pellentesque massa placerat duis ultricies lacus sed turpis tincidunt
+        venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt augunterdum velit euismod in pellentesque massa placerat duis ultricies lacus sed turpis tincidunt e  igravida dictum fusce ut placerat orci nulla pellentesque dignissim enim sit amet venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt augunterdum velit euismod in pellentesque massa placerat duis ultricies lacus sed turpis tincidunt
         </p>
     </article>
     <aside>
