--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
                     <li>Soft Skills</li>
                 </ul>
                 </section>
-                <div class="lados"><article class="lado-esquerdo">Comecei minha jornada na Trybe no dia 9 de novembro de 2020, de lá pra cá aprendi 
+                <div class="lados">
+                    <article class="lado-esquerdo">Comecei minha jornada na Trybe no dia 9 de novembro de 2020, de lá pra cá aprendi 
                     muitas coisas interessantes sobre desenvolvimento web e pretendo aprender ainda muito mais com 
                   o tempo de estudo, esse é meu primeiro projeto de muitos e estou ansioso para entrar no 
               mercado de trabalho na área da programação. </article>
+              <aside class="lado-direito"> Uma passagem curiosa sobre meu aprendizado foi quando meu sistema Linux deu erro
+                e tive que formatar o PC, após isso, meu Github não estava configurado na nova instalação do Linux
+                 e eu não sabia mexer no git ainda, então tive que aprender na prática. </aside>
+                </div>        
                 <footer id="rodape"> Todos os direitos reservados, Bernardo Miranda de Castro Fontes </footer>
