--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
         <h1 id="titulo">Lições Aprendidas - Projeto 1</h1>
     </header>
     <img src="rodrigofarias.jpeg" alt="Foto de Rodrigo Farias" id="minha_foto">
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>Html</li>
+        <li>Css</li>
+        <li>Zoom</li>
+        <li>Slack</li>
+        <li>Colaboração</li>
+        <li>Empatia</li>
+    </ol>
 </body>
 </html>
