Adiciona lista nao numerada

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
                 <li>Slack</li>
                 <li>Zoom</li>
             </ol>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>CSS Flexbox</li>
+                <li>Jest</li>
+                <li>React</li>
+                <li>Metodologias Ágeis</li>
+                <li>RTL</li>
+                <li>Redux</li>
+                <li>SQL</li>
+                <li>Mongo</li>
+                <li>NodeJS</li>
+            </ul>
         </main>
     </body>
 </html>
