--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <li>Normalização e Modelagem de Banco de Dados</li>
             <li>Arquitetura de Computadores e Redes</li>
             <li>Python</li>            
-        </ul>        
+        </ul>
+        <footer id="rodape">
+
+        </footer>    
     </body>
 </html>
