8 Adicionando elementos ao footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
     <!--                                           --- HEADER ---                                                     -->
@@ -44,6 +45,8 @@
         </section>
     </main>
     <footer id="rodape">
+        <p id="dev-name">Este site foi criado e desenvolvido por Pedro Toselli</p>
+        <a href="www.linkedin.com/in/pedrotoselli"><i class="fab fa-linkedin"></i></a>
     </footer>
 </body>
 </html>
