--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
             <li>HashSet</li>
         </ul>
     </section>
+    <footer id="rodape">
+        <h5>Todos os direitos reservados, Osvaldo Borges.</h5>
+    </footer>
 </body>
 </html>
