Add article about my learn journey

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             <li>SQL</li>
         </ul>
     </section>
+    <section>
+        <article id="sobre_mim">
+            Sou estudante de engenharia eletrônica na Universidade Tecnológica Federal do Paraná campus de Campo Mourão, sempre demonstrei interesse pela área de tecnologia, e hoje busco me aprofundar na área de embarcados e desenvolvimento de software. Neste ano conheci a Trybe e fiz a escolha de participar do processo seletivo, hoje estou a menos de um mês estudando, mas já posso perceber o quanto evolui e o longo caminho de aprendizado que existe pela frente, sou muito feliz por ter preenchido minha inscrição.
+        </article>
+    </section>
 <footer id="rodape">
     <p>Todos os direitos reservados, Bruno</p>
 </footer>
