--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lessons Learned</title>
     <link rel="stylesheet" href="/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+      <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
-    <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto">
-</body>
-
+    <main>
+      <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
+      <table>
+        <ol id="licoes_aprendidas">
+          <li>Unix</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Empatia</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Slack</li>
+          <li>Zoom</li>
+          <li>Inspect</li>
+          <li>Semantic HTML</li>
+        </ol>
+      </table>
+    </main>
+  </body>
 </html>
