Requisito 4 - Lista de lições aprendidas

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     </header>
     <main>
         <img id="minha_foto" src="pics/profile-pic.jpeg" alt="Minha foto de perfil">
+        <ol id="licoes_aprendidas">
+            <li>Unix e Bash</li>
+            <li>Versionamento com Git</li>
+            <li>Sicronização do versionamento local com o Github</li>
+            <li>HTML básico</li>
+            <li>CSS Básico</li>
+            <li>Reuniões no Zoom</li>
+            <li>Desenvolvimento de soft skills</li>
+            <li>Desenvolvimento do lado designer</li>
+            <li>Descobrimos quem é o Faraó</li>
+            <li>Aprendemos a nos questionar que animal seríamos</li>
+        </ol>
     </main>
 </body>
 </html>
