adicionando requisito bonus tabela

--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
           </header>
           <div id="imagem">
             <img id="minha_foto" src="https://raw.githubusercontent.com/BernardoFontes/BernardoFontes.github.io/master/assets/fotoredi.png" alt="Bernardo Fontes"> 
-            <a href="#minha_foto">Bernardo Fontes</a> </div>
+            <a href="#minha_foto">Bernardo Fontes</a> 
+        </div>
+        <table id="tabela" border="1">
+            <tr>
+                <td> <strong>Nome </strong></td>
+                <td><strong>Idade</strong></td>
+                <td><strong>Turma na Trybe</strong></td>
+            </tr>
+            <tr>
+            <td><strong>Bernardo Fontes</strong></td>
+                <td><strong>23</strong></td>
+                <td><strong>Turma 9</strong></td>
+            </tr>
             <section class="lista1">
                 <h2>Lições Aprendidas</h2>
                 <ol id="licoes_aprendidas">
