Corrige tamanho da imagem

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <div id="img">
-        <img src="20201004_155453.jpg" alt="Foto-minha" id="minha_foto">
+        <img src="rsz_20201004_155453.jpg" alt="Foto-minha" id="minha_foto">
     </div>
     <main>
         <article>
@@ -36,7 +36,6 @@
             </section>
             <section>
                 <ul id="licoes_a_aprender">
-                    
                 </ul>
             </section>
         </article>
