Artigo esquerda, direita.

--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 
 <!-- A configuração desse link deve ser feita para abrir em uma nova aba do navegador -->
     <a href="http://adrenaline.com.br" target="_blank" rel="noopener noreferrer">Adrenaline</a>
-
-<!-- O artigo deve ter mais de 300 letras e menos de 600 -->
-    <article>
-      <p>É ótimo estar estudando com pessoas tão dedicadas e legais, isso cria um ambiente muito bom
-        e prazeroso de estar e a forma como somos desafiados todos os dias me motiva cada vez mais à
-        dar o meu melhor pois somente assim conseguimos ir pra frente e mudar de vida, acredito que a
-        o que conheço hoje não é nem 10% do irei conhecer ao final deste curso pois as aulas são muito
-        bem feitas e muito explicativas, além de contarmos com o apoio dos instrutores.</p>
-    </article>
-
+    <section class="artigo">
 <!-- A seção deve ter mais que 100 letras e menos que 300 -->
-    <aside>
-      <p>Quando comecei a estudar Git, logo no começo do curso, percebi a forma como o <strong>Gabriel
-        Oliva</strong> passava o conteúdo era muito boa, além dos vídeos e dos artigos extras que sempre
-        estão disponíveis pra acrescentar nos estudos.</p>
-    </aside>
+      <aside class="lado-direito">
+        <p>Quando comecei a estudar Git, logo no começo do curso, percebi a forma como o <strong>Gabriel
+          Oliva</strong> passava o conteúdo era muito boa, além dos vídeos e dos artigos extras que sempre
+          estão disponíveis pra acrescentar nos estudos.</p>
+        </aside>
+<!-- O artigo deve ter mais de 300 letras e menos de 600 -->
+      <article class="lado-esquerdo">
+        <p>É ótimo estar estudando com pessoas tão dedicadas e legais, isso cria um ambiente muito bom
+          e prazeroso de estar e a forma como somos desafiados todos os dias me motiva cada vez mais à
+          dar o meu melhor pois somente assim conseguimos ir pra frente e mudar de vida, acredito que a
+          o que conheço hoje não é nem 10% do irei conhecer ao final deste curso pois as aulas são muito
+          bem feitas e muito explicativas, além de contarmos com o apoio dos instrutores.</p>
+      </article>      
+    </section>
 
 <!-- O rodapé deve utilizar a tag footer e possuir o ID "rodape" -->
     <footer id="rodape">
