Requisito 7 - link externo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li>Python</li>            
         </ul>
         <footer id="rodape">
-
+            <a href="https://henrique-moura.github.io/" target="_blank">Meu GitHub</a>
         </footer>    
     </body>
 </html>
